# D1Gg2r

./: Cargo.toml  README.md  build.rs  colony.json
assets/linux/: digger.desktop  install-desktop-entry.sh
docs/: architecture.md  building.md  configuration.md
src/: chart.rs  gauge.rs  gpu.rs  history.rs  i18n.rs  icons.rs  main.rs  metrics.rs  preferences.rs  ringbuf.rs  theme.rs  ui.rs
