[package]
name = "digger"
version = "0.1.0"
edition = "2021"
description = "Digger — A cross-platform system monitor with persistent history"
license = "MIT"
authors = ["MotherSphere"]
repository = "https://github.com/MotherSphere/D1Gg2r-Private"
keywords = ["system-monitor", "sysinfo", "gui", "iced"]
categories = ["command-line-utilities", "os"]
readme = "README.md"

[dependencies]
iced = { version = "0.13", features = ["canvas", "tokio", "image"] }
sysinfo = "0.32"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
dirs = "5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-rust = "4"
nvml-wrapper = { version = "0.10", optional = true }

[target.'cfg(windows)'.dependencies]
wmi = "0.15"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Threading",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = []
gpu = ["nvml-wrapper"]
